Small corrections abstact

--- a/Thesis_Cutini/Thesis_Cutini.tex
+++ b/Thesis_Cutini/Thesis_Cutini.tex
@@ -126,14 +126,14 @@ sorting=none
 % \addcontentsline{toc}{chapter}{Abstract}
 This thesis investigates the application of modern and advanced optimal control tecniques within the realm of an innovative sport application. 
 The system comprises an autonomous electric go-kart towing a plexiglass airshield, utilized for isolating Olympic athletes performing the 100m event, during the overspeed training phase.
-The primary objective of this thesis is the deployment of a suitable controller for autonomously regulating the go-kart and the airshield in response to the position and velocity of the runner during sprint performance. 
-Initially, a proper linear kinematic model approximation of the system, serving as a foundation for controller design, implementation and testing, has been established.
+The primary objective of this thesis is the deployment of a suitable controller for autonomously regulating the go-kart and the airshield in response to the position and velocity of the runner during a sprint performance. 
+Initially, a proper linear kinematic model approximation of the system, serving as a foundation for the controller design, implementation and testing, has been established.
 The main contribution of this work lies in the development of different controllers for addressing the desired task: a Gain Scheduling Linear Quadratic Regulator and a Linear Model Predictive Controller.
 These controllers are strongly model based and non perfectly modeled dynamics effects or unknown disturbances could lead to suboptimal performance of the control architecture.
  To address this, an Offset-free Model Predictive Control scheme has been introduced as a third control formulation.
 To demonstrate the effectiveness of the implemented controllers, a comparison of their performance is presented and analyzed within the framework of Python simulations. 
 For comparison purposes data taken from 100 meters competitions have been utilized.
-For Hardware-in-the-loop tests on the physical system, an implementation using the ROS 2 environment has been conducted.
+For Hardware-in-the-loop tests on the physical system, an implementation using the ROS2 environment has been conducted.
 Several on-field experiments have been carried out in the real-world settings to understand the performances of the controllers when operating with information coming from sensors mesurements.
 This application holds significant potential for everyday use during training phases on the track and field racetrack.
 
